--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -50,6 +50,7 @@
                             <th (click)="sort('id')" scope="col">
                                 ID <i class="fa fa-sort"></i>
                             </th>
+                            <th>Added By</th>
                             <th scope="col">Purpose</th>
                             <th scope="col">Client Details</th>
 
@@ -78,6 +79,7 @@
 
 
                             <td>{{ user.refId }}</td>
+                            <td>{{user?.added_By?.fullname}}</td>
                             <td>{{ user.property_purpose }}</td>
                             <td>
                                 <b>Name : </b>{{ user.client_name | titlecase }} <br />
@@ -119,12 +121,8 @@
                                 </ng-template>
 
                                 <td>{{ user.created | date: "dd/MM/yyyy" }}</td>
-
                                 <td>
-                                    <span *ngIf="user?.assigned_to?.fullname === ''">Self</span>
-                                    <span *ngIf="user?.assigned_to?.length > 0">
-                                        <span *ngFor="let assign of user?.assigned_to">{{ assign?.fullname }}<br></span>
-                                    </span>
+                                    <span *ngIf="user?.assignedTo[0] === ''">Self</span> {{user?.assignedTo[0]}}
                                 </td>
                                 <td>
                                     <span><b>Media: </b> {{ user?.media }}</span
