--- a/src/app/dashboard/assigned-leads/assigned-leads.component.html
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.html
@@ -38,6 +38,7 @@
                     <thead>
                         <th scope="col"> </th>
                         <th scope="col">ID</th>
+                        <th>Added By</th>
                         <th scope="col">Purpose</th>
                         <th scope="col">Client Details</th>
                         <th scope="col">Location</th>
@@ -55,6 +56,7 @@
                                 </ng-template>
                             </td>
                             <td>{{ user.refId }}</td>
+                            <td>{{user.added_ByName}}</td>
                             <td>{{ user.property_purpose }}</td>
                             <td>
                                 <b>Name : </b>{{ user.client_name |titlecase }} <br />
